--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre mi">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -37,7 +37,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section" id="about">
+            <section class="resume-section" id="sobre mi">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Luis
@@ -47,7 +47,8 @@
                         Los Paltos 0182,Maipo, Buin · +56987152486 · 
                         <a href="mailto:luis.liberonj@gmail.com">luis.liberonj@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Soy estudiante de 3er año de Ing. Informatica, preparado y motivado para proponer soluciones a problemas de logica.
+Me motiva aprender y saber sobre nuevas herramientas tecnologicas, ademas de ver ek desarrollo y crecimiento personal que puedo obtener para seguir mejorando, capaz de mantener un buen ambiente laboral, tengo entusiasmo y compromiso con respecto a las tareas a realizar</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
