--- a/index.html
+++ b/index.html
@@ -73,30 +73,21 @@
                             <h3 class="mb-0">Participacion Innovaton de EY2</h3>
                             <p>Evento sobre desafio de innovacion en cual se desarrollo para la resolucion de problema un programa de automatizacion para agilizar tareas dentro de una empresa</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">10 - 11 Mayo </span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">10 - 11 Mayo 2019</span></div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="educacion">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Educacion</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Universidad de las Americas</h3>
+                            <div class="subheading mb-3">Facultad de Ingenieria y Negocios</div>
+                            <div>Ingenieria de Ejecucion Informatica</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 04 2019 - Actual</span></div>
                     </div>
                 </div>
             </section>
