--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </div>
                     <p class="lead mb-5">Soy estudiante de 3er año de Ing. Informatica, preparado y motivado para proponer soluciones a problemas de logica.<br>Me motiva aprender y saber sobre nuevas herramientas tecnologicas, ademas de ver ek desarrollo y crecimiento personal que puedo obtener para seguir mejorando, capaz de mantener un buen ambiente laboral, tengo entusiasmo y compromiso con respecto a las tareas a realizar</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-instagram">src="https://github.com/techygalaxy360"</i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i>https://github.com/techygalaxy360</a>
+                        <a class="social-icon" href="#!"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-github"></i>src="https://github.com/techygalaxy360"</a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
